--- a/src/app/components/core/orders/orders.component.html
+++ b/src/app/components/core/orders/orders.component.html
@@ -1,25 +1,57 @@
+<div class="grid justify-center">
 
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-12">
-            <table class="table table-hover" style="cursor: pointer;">
-                <thead class="thead-light">
-                    <tr>
-                        <th>Order</th>
-                        <th>Date</th>
-                        <th>Total</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let order of orders" [routerLink]="['/orders/{{order.id}}']">
-                        <th># {{order.id}}</th>
-                        <td>{{order.orderDate}}</td>
-                        <td>{{order.total }}</td>
-                        <td>{{order.status}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    <div class="relative overflow-x-auto shadow-md sm:rounded-lg  md:w-[800px]">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                <tr>
+                    <th scope="col" class="px-6 py-3">
+                        Order Id
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                        Order Date
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                        Total total Price
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                        items picture
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
+                    *ngFor="let order of orders" [routerLink]="['/orders/{{order.id}}']">
+
+                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                        {{order.id}}
+                    </th>
+                    <td class="px-6 py-4">
+                        {{order.orderDate}}
+                    </td>
+                    <td class="px-6 py-4">
+                        $ {{order.total }}
+                    </td>
+                    <td class="px-6 py-4 grid justify-center">
+                        <img src="{{order.items[0].pictureUrl }}" alt="">
+                        <div class="grid justify-center text-red-600 text-2xl">Item Price : ${{order.items[0].price }}</div>
+
+                        <img *ngIf="order.items[1]" src="{{order.items[1].pictureUrl }}" alt="">
+                        <div class="grid justify-center text-red-600 text-2xl" *ngIf="order.items[1]">
+                            Item Price : ${{order.items[1].price }}</div>
+
+                        <img *ngIf="order.items[2]" src="{{order.items[2].pictureUrl }}" alt="">
+                        <div class="grid justify-center text-red-600 text-2xl" *ngIf="order.items[2]">
+                            Item Price : ${{order.items[2].price }}</div>
+
+                        <img *ngIf="order.items[3]" src="{{order.items[3].pictureUrl }}" alt="">
+                        <div class="grid justify-center text-red-600 text-2xl" *ngIf="order.items[3]">
+                            Item Price : ${{order.items[3].price }}</div>
+
+                    </td>
+
+                </tr>
+
+            </tbody>
+        </table>
     </div>
 </div>
