--- a/src/app/components/core/cart/order-totals/order-totals.component.html
+++ b/src/app/components/core/cart/order-totals/order-totals.component.html
@@ -1,9 +1,11 @@
+<!-- order-totals.component.html -->
+
 <div class="mb-3">
     <div
         class="md:w-[600px] p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-        <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400 text-center">summary</h5>
+        <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400 text-center">Summary</h5>
         <div class="flex justify-center items-baseline text-gray-900 dark:text-white">
-            <span class="text-5xl font-extrabold tracking-tight">{{total |currency}}</span>
+            <span class="text-5xl font-extrabold tracking-tight">{{total}} L.E</span>
         </div>
         <ul role="list" class="space-y-5 my-7">
             <li class="flex space-x-3 items-center">
@@ -12,7 +14,8 @@
                     <path
                         d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
                 </svg>
-                <span class="text-base font-normal leading-tight text-gray-500 dark:text-gray-400">Subtotal Price : {{subtotal |currency}}</span>
+                <span class="text-base font-normal leading-tight text-gray-500 dark:text-gray-400">Subtotal Price:
+                    {{subtotal}} L.E</span>
             </li>
 
             <li class="flex space-x-3 line-through decoration-gray-500">
@@ -22,14 +25,14 @@
                         d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
                 </svg>
                 <span class="text-base font-normal leading-tight text-gray-500">
-                    Shipping : {{shippingPrice |currency}}
+                    Shipping: {{shippingPrice}} L.E
                 </span>
             </li>
-
         </ul>
-        <button [routerLink]="['/checkout']" class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-200 dark:focus:ring-blue-900 font-medium rounded-lg text-sm px-5 py-2.5 inline-flex justify-center w-full text-center">
+
+        <button (click)="proceedToCheckout()" [routerLink]="['/checkout']"
+            class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-200 dark:focus:ring-blue-900 font-medium rounded-lg text-sm px-5 py-2.5 inline-flex justify-center w-full text-center">
             Proceed to checkout
         </button>
     </div>
 </div>
-
