--- a/src/app/components/core/department/product-item/product-item.component.html
+++ b/src/app/components/core/department/product-item/product-item.component.html
@@ -1,17 +1,22 @@
-<div
-class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-<a [routerLink]="['/products/details',product.id]" class="grid justify-center items-center">
-    <img class="rounded-t-lg h-[12em] mb-4" src="{{product.pictureUrl}}" alt="{{product.name}}" />
-</a>
-<div class="px-5 pb-5">
-    <a>
-        <h5 class="text-lg font-semibold tracking-tight text-gray-900 dark:text-white">{{product.name}}</h5>
+<div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+    <a [routerLink]="['/products/details',product.id]" class="grid justify-center items-center">
+        <img class="rounded-t-lg h-[12em] mb-4" src="{{product.pictureUrl}}" alt="{{product.name}}" />
     </a>
-    <div class="flex items-center justify-between">
-        <span class="text-3xl font-bold text-gray-900 dark:text-white">{{product.price }} L.E</span>
-        <button (click)="addItemToBasket()"
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add
-            to cart</button>
+    <div class="px-5 pb-5">
+        <a>
+            <h5 class="text-lg font-semibold tracking-tight text-gray-900 dark:text-white">{{product.name}}</h5>
+        </a>
+        <div class="flex items-center justify-between">
+            <div class="grid">
+                <div class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-green-400 border border-green-400"
+                    *ngIf="product.quantity>0">available : {{product.quantity}} items</div>
+                <div class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-red-400 border border-red-400"
+                    *ngIf="product.quantity <= 0">not available now</div>
+                <span class="text-3xl font-bold text-gray-900 dark:text-white">{{product.price }} L.E</span>
+            </div>
+            <button (click)="addItemToBasket()" *ngIf="product.quantity >0 "
+                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add
+                to cart</button>
+        </div>
     </div>
-</div>
 </div>
