--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -20,23 +20,23 @@
                     class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                     <li>
                         <a class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 mx-3"
-                            aria-current="page" [routerLink]="['']" [routerLinkActive]="['text-blue-500']"
+                            aria-current="page" [routerLink]="['']" routerLinkActive="font-bold text-xl text-gray-600"
                             [routerLinkActiveOptions]="{exact:true}">{{'navbar.home' | translate}}</a>
                     </li>
                     <li>
                         <a class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                            [routerLink]="['/products']" [routerLinkActive]="['text-blue-500']">{{'navbar.products' |
+                            [routerLink]="['/products']" routerLinkActive="font-bold text-xl text-gray-600">{{'navbar.products' |
                             translate}}</a>
                     </li>
                     <li>
                         <a class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                            [routerLink]="['/contact']" [routerLinkActive]="['text-blue-500']">{{'navbar.contacts' |
+                            [routerLink]="['/contact']" routerLinkActive="font-bold text-xl text-gray-600">{{'navbar.contacts' |
                             translate}}
                         </a>
                     </li>
                     <li>
                         <a class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                            [routerLink]="['/cart']" [routerLinkActive]="['text-blue-500']">
+                            [routerLink]="['/cart']" routerLinkActive="font-bold text-xl text-gray-600">
                             {{'navbar.prices' | translate}}</a>
                     </li>
 
